# BatchX

./: CMakeLists.txt  README.md  main.cpp
include/io/reader/: csv_reader.h  data_reader.h  data_reader_factory.h
include/io/writer/: csv_writer.h
include/processor/: data_processor.h  filter_expression.h  filter_processor.h  processor_factory.h
src/io/reader/: csv_reader.cpp  data_reader_factory.cpp
src/io/writer/: csv_writer.cpp
src/processor/: filter_processor.cpp  processor_factory.cpp
test/: test1.cpp  test_csv.cpp
